{
    "name": "GameInput",
    "maps": [
        {
            "name": "Game",
            "id": "83744acb-966a-47a9-86be-136edae5aeef",
            "actions": [
                {
                    "name": "FloaterDepthUp",
                    "type": "Button",
                    "id": "d6ad2b9e-566b-4490-a8f9-e9f2396a4b7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FloaterDepthDown",
                    "type": "Button",
                    "id": "e7e97bfe-768d-4c24-ad16-9c0fda432f28",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Winding",
                    "type": "Button",
                    "id": "74a0a65e-c9b8-4d31-bc6f-c613e3522571",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cast",
                    "type": "Button",
                    "id": "733a3079-9b85-4937-8a45-95053f81bbae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hooking",
                    "type": "Button",
                    "id": "9a5c2b53-d2d3-4968-a742-26bd12914d12",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Looking",
                    "type": "PassThrough",
                    "id": "e52ed570-754c-4afd-97c3-f9a64de22c5c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d52f2269-ae99-4b79-a741-82bdd273c68f",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "FloaterDepthUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa486992-512f-4044-96a8-924968757310",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FloaterDepthDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "698d45aa-66b1-4a7f-b7c2-b9c450691d47",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Winding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c0e85c2-6202-44dc-bd77-573b430d1d0b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hooking",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c96b20e-ea52-48f1-bb22-f054200b829c",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Looking",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7ceeef1-1a27-4cec-82e8-24169106c5f0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cast",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}